Some model structure

--- a/03-bayesian.Rmd
+++ b/03-bayesian.Rmd
@@ -247,33 +247,38 @@ For example, those of the same sex are more likely to be similar, as are those o
 
 ## Model structure {#model-structure}
 
-Section \@ref(st-statistics) showed that in spatio-temporal statistics observations are related to each other, and should not all be considered as IID.
+Section \@ref(st-statistics) showed that in spatio-temporal statistics observations are related to each other, and inappropriate to treat as IID.
 This section discuss ways in which the relations between observations can be encoded mathematically.
-Beginning with simple approaches, the expressiveness required to model the data in this thesis is built up in stages.
+First, simple structures are discussed, before moving on to more expressive structures.
 
 ### Linear model
 
-In a linear model, each observation $i = 1, \ldots, n$ is modelled using a Gaussian distribution
+In a linear model, each observation $i \in [n]$ is modelled using a Gaussian distribution
 \begin{equation}
 y_i \sim \mathcal{N}(\mu_i, \sigma).
 \end{equation}
 The conditional mean $\mu_i$ is assumed to be linearly related to a collection of $l$ covariates
-\begin{equation}
-\mu_i = \beta_0 + \sum_{l = 1}^{p} \beta_l z_{li}.
-\end{equation}
-Priors may be placed on the regression coefficients $\beta_l \sim p(\beta_l)$ for $l = 0, \ldots, p$ as well as the observation standard deviation $\sigma \sim p(\sigma)$
+\begin{align}
+\mu_i &= \eta_i \\
+\eta_i &= \beta_0 + \sum_{l = 1}^{p} \beta_l z_{li}. (\#eq:linear-model)
+\end{align}
+Priors may be placed on the regression coefficients $\beta_l \sim p(\beta_l)$ for $l = 0, \ldots, p$ as well as the observation standard deviation $\sigma \sim p(\sigma)$.
 
 ### Generalised linear model
 
-A generalised linear model (GLM) extends the linear model by allowing the conditional mean to be connected to the linear predictor via a link function
+Generalised linear models (GLMs) extend the linear models by allowing the conditional mean $\mu_i$ to be connected to the linear predictor $\eta_i$ via a link function $g$.
 \begin{align}
 y_i &\sim p(y_i \, | \, \eta_i), \\
-\mu_i &= \mathbb{E}(y_i \, | \, \eta_i) = g(\eta_i).
+\mu_i &= \mathbb{E}(y_i \, | \, \eta_i) = g(\eta_i). 
 \end{align}
+The logistic function $g(\eta) = \exp(\eta) / (1 + \exp(\eta))$ is commonly used as a link function to ensure that the conditional mean is in the range $[0, 1]$.
+Similarly, the exponential function $g(\eta) = \exp(\eta)$ is also commonly used to ensure the conditional mean is positive.
+GLMs also admit a wider range of likelihoods $p(y_i \, | \, \eta_i)$ than linear models, typically restrictly to the so-called exponential family of distributions.
+The equation for the linear predictor is the same as in the linear model case (Equation \@ref(eq:linear-model)).
 
 ### Generalised linear mixed effects model
 
-In a generalised linear mixed effects model (GLMM) the linear predictor is extended as follows
+In a generalised linear mixed effects model (GLMM) the linear predictor of the GLM is extended as follows
 \begin{equation}
 \eta_i = \beta_0 + \sum_{l = 1}^{p} \beta_l z_{li} + \sum_{k = 1}^{r} u_k(w_{ki}).
 \end{equation}
@@ -282,45 +287,25 @@ The terms $\beta_l$ are then referred to as fixed effects.
 Unfortunately these terms have notoriously many different and incompatible definitions which can cause confusion [@gelman2005analysis].
 
 Random effects allow for more complex sharing of information between observations.
-Complete pooling, no pooling, partial pooling.
+To demonstrate, consider the complete pooling model
+\begin{equation}
+\eta_i = \beta_0.
+\end{equation}
+In this model, all observations are assumed to be equivalent.
+Alternatively, consider the no pooling model
+\begin{equation}
+\eta_i = \beta_0 + \beta_1 z_i,
+\end{equation}
+with $z_i \in \{0, 1\}$ a binary covariate.
+Now, there are two groups of observations.
+Finally, consider the partial pooling model.
+For the partial pooling model, the extent to which information is shared between groups is learnt rather than fixed at the outset, as with the complete or no pooling models.
+The parameter $\beta_0$ applies to all groups, and each group is differentiated by a specific value of $u_i$.
+
 Random effects can be structured to share information between some observations more than others.
-In spatio-temporal statistics, structured spatial and temporal random effects are often used to impose smoothness.
-Spatial random effects are the subject of Chapter \@ref(beyond-borders).
+In spatio-temporal statistics, structured spatial and temporal random effects are often used to encode smoothness.
 
 A generalised additive model [GAMs; @wood2017generalized; @hastie1987generalized] is a type of GLMM in which such and such.
-
-<!-- Group structure is a simple, binary way in which observations are related. -->
-<!-- Figure \@ref(fig:hierarchical-structure) illustrates a case in which each individual in a study is observed some number of times, and observations of the same individual are grouped together. -->
-<!-- Observations from the same individual are more likely to be similar than observations of different individuals. -->
-<!-- Groups can also be nested within other groups, as well as crossed with each other. -->
-
-<!-- Consider three models for this data. -->
-<!-- In each case, the observations are assumed to be Gaussian. -->
-
-<!-- 1. **Complete pooling**: -->
-<!-- In the complete pooling model, group structure is ignored and all observations are treated as IID -->
-<!-- \begin{align} -->
-<!-- y_{ij} \sim \mathcal{N}(\mu, \sigma), \\ -->
-<!-- (\mu, \sigma) \sim p(\mu, \sigma). -->
-<!-- \end{align} -->
-<!-- 2. **No pooling**: -->
-<!-- Alternatively, the groups can be modelled entirely separately with group specific mean $\mu_i$ and standard deviation $\sigma_i$ parameters -->
-<!-- \begin{align} -->
-<!-- y_{ij} \sim \mathcal{N}(\mu_i, \sigma_i), \\ -->
-<!-- (\mu_i, \sigma_i) \sim p(\mu_i, \sigma_i). -->
-<!-- \end{align} -->
-<!-- 3. **Partial pooling**: -->
-<!-- In this model, some amount of information is shared between the groups -->
-<!-- \begin{align} -->
-<!-- y_{ij} &\sim \mathcal{N}(\mu_i, \sigma), \\ -->
-<!-- \mu_i &= \beta + u_i, \\ -->
-<!-- \beta &\sim p(\beta), \\ -->
-<!-- \mathbf{u} &\sim p(\mathbf{u}), \\ -->
-<!-- \sigma &\sim p(\sigma), -->
-<!-- \end{align} -->
-<!-- where the vector $\mathbf{u} = (u_1, \ldots, u_n)$. -->
-<!-- The parameter $\beta$ applies to all groups, and each group is differentiated by a specific value of $u_i$. -->
-<!-- When inference is performed for the partial pooling model, the extent to which information is shared between groups is learnt rather than fixed at the outset, as with the complete or no pooling models. -->
 
 ### Latent Gaussian model {#lgm}
 
@@ -335,7 +320,7 @@ The vector $\boldsymbol{\mathbf{\theta}}_1 \in \mathbb{R}^{s_1}$, with $s_1$ ass
 Let $\boldsymbol{\mathbf{\theta}} = (\boldsymbol{\mathbf{\theta}}_1, \boldsymbol{\mathbf{\theta}}_2) \in \mathbb{R}^m$ with $m = s_1 + s_2$ be all hyperparameters, with prior distribution $p(\boldsymbol{\mathbf{\theta}})$.
 Such that $\boldsymbol{\mathbf{\phi}} = (\mathbf{x}, \boldsymbol{\mathbf{\theta}})$ with posterior distribution
 \begin{equation}
-p(\mathbf{x}, \boldsymbol{\mathbf{\theta}} \, | \, \mathbf{y}) \propto p(\mathbf{y} \, | \, \mathbf{x}, \boldsymbol{\mathbf{\theta}}) p(\mathbf{x} \, | \, \boldsymbol{\mathbf{\theta}}) p(\boldsymbol{\mathbf{\theta}})
+p(\mathbf{x}, \boldsymbol{\mathbf{\theta}} \, | \, \mathbf{y}) \propto p(\mathbf{y} \, | \, \mathbf{x}, \boldsymbol{\mathbf{\theta}}) p(\mathbf{x} \, | \, \boldsymbol{\mathbf{\theta}}) p(\boldsymbol{\mathbf{\theta}}).
 \end{equation}
 
 ### Extended latent Gaussian model {#elgm}
@@ -358,7 +343,7 @@ In Chapter \@ref(naomi-aghq), the Naomi small-area estimation model used to prod
 
 ## Model comparison
 
-For a review see @vehtari2012survey.
+For a review see @vehtari2012survey or @gelman2014understanding.
 
 ### Information criteria
 
@@ -385,7 +370,7 @@ where $\hat{\boldsymbol{\mathbf{\phi}}}$ is the posterior mean or mode, and the 
 \begin{equation}
 p_\text{DIC} = 2 \left( \log p(\mathbf{y} \, | \,\hat{\boldsymbol{\mathbf{\phi}}}) - \mathbb{E}_{{\boldsymbol{\mathbf{\phi}}} \, | \, \mathbf{y}}[\log p(\mathbf{y} \, | \, \boldsymbol{\mathbf{\phi}})] \right).
 \end{equation}
-A weakness of the DIC is that it is based on a point estimate [@spiegelhalter2014deviance; @gelman2014understanding]
+A weakness of the DIC is that it is based on a point estimate [@spiegelhalter2014deviance]
 
 * The widely applicable information criterion [WAIC; @watanabe2013widely] improves upon the DIC by using the predictive density of the data and is given by
 \begin{align}
