--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -13,7 +13,7 @@ bibliography: references.bib
 ---
 
 ```{r}
-resource_version <- "20231121-152152-27a94876"
+resource_version <- "20231122-105059-c6eec861"
 ```
 
 # Models for spatial structure {#beyond-borders}
@@ -50,7 +50,6 @@ The administrative divisions of a country used in small-area estimation are one 
 This chapter tests the hypothesis that using more realistic assumptions about spatial structure improves the performance of small-area estimation models.
 Performance in this context refers to accurate forecasts of parameters as measured by scoring rules.
 In doing so, practical recommendations for modelling areal spatial structure are offered.
-The results are presented in @howes2023beyond.
 Code for the analysis in this chapter is available from [`https://github.com/athowes/beyond-borders`](https://github.com/athowes/beyond-borders), and supported by the `arealutils` R package [@howes2023arealutils].
 
 ## Models based on adjacency {#adjacency-models}
@@ -506,7 +505,7 @@ In cases where a prior distribution was set on the length-scale it was $l \sim \
 
 Approximate Bayesian inference was conducted using adaptive Gauss-Hermite quadrature [AGHQ; @stringer2022fast] with $k = 3$ quadrature points over a marginal Laplace approximation via the `aghq` package [@stringer2021implementing].
 Models were implemented using a Template Model Builder C++ template for the log-posterior via the `TMB` R package [@kristensen2016tmb].
-Appendix \@ref(aghq-nuts) compares approximate inference results to those obtained using the No-U-Turn Sampling (NUTS) Hamiltonian Monte Carlo (HMC) algorithm run using `Stan` [@carpenter2017stan] via the `tmbstan` package [@monnahan2018no].
+Appendix \@ref(aghq-nuts) compares posterior mean and standard deviations to those obtained using the No-U-Turn Sampling (NUTS) Hamiltonian Monte Carlo (HMC) algorithm run using `Stan` [@carpenter2017stan] via the `tmbstan` package [@monnahan2018no].
 
 ### Model assessment {#model-assessment}
 
