--- a/90-appendixA.Rmd
+++ b/90-appendixA.Rmd
@@ -5,12 +5,33 @@
 <!-- If you feel it necessary to include an appendix, it goes here. The first appendix should include the commands above. -->
 
 ```{r}
-resource_version <- "20231121-152152-27a94876"
+resource_version <- "20231122-105059-c6eec861"
 ```
 
 # Models for spatial structure
 
 ## Comparison of AGHQ to NUTS {#aghq-nuts}
+
+(ref:iid-aghq-nuts) Figure caption.
+
+```{r iid-aghq-nuts, fig.cap="(ref:iid-aghq-nuts)"}
+path <- paste0("resources/beyond-borders/", resource_version, "/depends/iid-aghq-nuts.png")
+knitr::include_graphics(path)
+```
+
+(ref:besag-aghq-nuts) Figure caption.
+
+```{r besag-aghq-nuts, fig.cap="(ref:besag-aghq-nuts)"}
+path <- paste0("resources/beyond-borders/", resource_version, "/depends/besag-aghq-nuts.png")
+knitr::include_graphics(path)
+```
+
+(ref:bym2-aghq-nuts) Figure caption.
+
+```{r bym2-aghq-nuts, fig.cap="(ref:bym2-aghq-nuts)"}
+path <- paste0("resources/beyond-borders/", resource_version, "/depends/bym2-aghq-nuts.png")
+knitr::include_graphics(path)
+```
 
 ## Simulation study {#simulation-appendix}
 
