Add captions and fixing things in the PDF

--- a/90-appendixA.Rmd
+++ b/90-appendixA.Rmd
@@ -12,28 +12,34 @@ resource_version <- "20231122-105059-c6eec861"
 
 ## Comparison of AGHQ to NUTS {#aghq-nuts}
 
-(ref:iid-aghq-nuts) Figure caption.
+(ref:iid-aghq-nuts) A comparison of the posterior means and standard deviations obtained with AGHQ via `aghq` as compared with NUTS via `tmbstan` fitting an IID inferential model to IID synthetic data on the grid geometry (Panel \@ref(fig:geometries)E).
 
 ```{r iid-aghq-nuts, fig.cap="(ref:iid-aghq-nuts)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/iid-aghq-nuts.png")
 knitr::include_graphics(path)
 ```
 
-(ref:besag-aghq-nuts) Figure caption.
+(ref:besag-aghq-nuts) A comparison of the posterior means and standard deviations obtained with AGHQ via `aghq` as compared with NUTS via `tmbstan` fitting a Besag inferential model to IID synthetic data on the grid geometry (Panel \@ref(fig:geometries)E).
 
 ```{r besag-aghq-nuts, fig.cap="(ref:besag-aghq-nuts)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/besag-aghq-nuts.png")
 knitr::include_graphics(path)
 ```
 
-(ref:bym2-aghq-nuts) Figure caption.
+(ref:bym2-aghq-nuts) A comparison of the posterior means and standard deviations obtained with AGHQ via `aghq` as compared with NUTS via `tmbstan` fitting a BYM2 inferential model to IID synthetic data on the grid geometry (Panel \@ref(fig:geometries)E).
 
 ```{r bym2-aghq-nuts, fig.cap="(ref:bym2-aghq-nuts)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/bym2-aghq-nuts.png")
 knitr::include_graphics(path)
 ```
 
+## Lengthscale prior sensitivity analysis {#lengthscale-prior}
+
 ## Simulation study {#simulation-appendix}
+
+### Lengthscale hyperparameter {#lengthscale}
+
+### BYM2 proportion hyperparameter {#bym2-proportion}
 
 ### Mean squared error
 
@@ -51,49 +57,49 @@ if(knitr::is_html_output()) gt_crps
 if(knitr::is_latex_output()) gt::as_latex(gt_crps)
 ```
 
-(ref:map-crps-1) Figure caption.
+(ref:map-crps-1) Cloropleth showing the mean value of the CRPS at each area of the first vignette geometry (Panel \@ref(fig:geometries)A).
 
 ```{r map-crps-1, fig.cap="(ref:map-crps-1)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/map-crps-1.png")
 knitr::include_graphics(path)
 ```
 
-(ref:map-crps-2) Figure caption.
+(ref:map-crps-2) Cloropleth showing the mean value of the CRPS at each area of the second vignette geometry (Panel \@ref(fig:geometries)B).
 
 ```{r map-crps-2, fig.cap="(ref:map-crps-2)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/map-crps-2.png")
 knitr::include_graphics(path)
 ```
 
-(ref:map-crps-3) Figure caption.
+(ref:map-crps-3) Cloropleth showing the mean value of the CRPS at each area of the third vignette geometry (Panel \@ref(fig:geometries)C).
 
 ```{r map-crps-3, fig.cap="(ref:map-crps-3)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/map-crps-3.png")
 knitr::include_graphics(path)
 ```
 
-(ref:map-crps-4) Figure caption.
+(ref:map-crps-4) Cloropleth showing the mean value of the CRPS at each area of the fourth vignette geometry (Panel \@ref(fig:geometries)D).
 
 ```{r map-crps-4, fig.cap="(ref:map-crps-4)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/map-crps-4.png")
 knitr::include_graphics(path)
 ```
 
-(ref:map-crps-grid) Figure caption.
+(ref:map-crps-grid) Cloropleth showing the mean value of the CRPS at each area of the grid geometry (Panel \@ref(fig:geometries)E).
 
 ```{r map-crps-grid, fig.cap="(ref:map-crps-grid)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/map-crps-grid.png")
 knitr::include_graphics(path)
 ```
 
-(ref:map-crps-civ) Figure caption.
+(ref:map-crps-civ) Cloropleth showing the mean value of the CRPS at each area of the Côte d’Ivoire geometry (Panel \@ref(fig:geometries)F).
 
 ```{r map-crps-civ, fig.cap="(ref:map-crps-civ)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/map-crps-civ.png")
 knitr::include_graphics(path)
 ```
 
-(ref:map-crps-tex) Figure caption.
+(ref:map-crps-tex) Cloropleth showing the mean value of the CRPS at each area of the Texas geometry (Panel \@ref(fig:geometries)G).
 
 ```{r map-crps-tex, fig.cap="(ref:map-crps-tex)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/map-crps-tex.png")
