--- a/index.Rmd
+++ b/index.Rmd
@@ -150,7 +150,7 @@ source('scripts_and_filters/create_chunk_options.R')
 source('scripts_and_filters/wrap_lines.R')
 ```
 
-```{r}
+```{r echo=FALSE, include=FALSE}
 knitr::opts_chunk$set(cache = FALSE)
 ```
 
