--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -500,6 +500,7 @@ A weakly informative $\mathcal{N}(-2, 1)$ prior was placed on $\beta_0$, setting
 
 In cases where the length-scale $l$ was fixed, it was set based on the geometry such that points an average distance apart had 1\% correlation [@best1999bayesian].
 In cases where a prior distribution was set on the length-scale it was $l \sim \mathrm{Inv{\text-}Gamma}(a, b)$, with $a$ and $b$ chosen for each geometry such that 1\% of the prior mass was below 0.1 and 1\% of the prior mass was above the maximum distance between points [@betancourt2017robust].
+Appendix \@ref(lengthscale-prior) analyses the sensitivity of the lengthscale posterior distribution to the choice of prior distribution.
 
 #### Inference
 
@@ -541,12 +542,19 @@ Uniformity was assessed using probability integral transform (PIT) histograms [@
 
 ### Results
 
-(ref:crps-boxplot) Figure caption.
+(ref:crps-boxplot) Boxplots showing the minimum value, 25th quantile, median, 75th quantile and maximum value of the CRPS for each inferential model and simulation model. The mean value is shown as a point.
 
 ```{r crps-boxplot, fig.cap="(ref:crps-boxplot)"}
 path <- paste0("resources/beyond-borders/", resource_version, "/depends/crps-boxplot.png")
 knitr::include_graphics(path)
 ```
+
+The BYM2 model performed similarly to the IID model on IID synthetic data, and similarly to the Besag model on Besag data.
+The BYM2 proportion parameter was learnt (Appendix \@ref(bym2-proportion)).
+
+The kernel models with a prior distribution on the lengthscale performed better than those which fixed the lengthscale based on a heuristic.
+These models were able to successfully infer the lengthscale (Appendix \@ref(lengthscale)).
+Discuss lengthscale to noise identifiability and posterior correlation.
 
 ## HIV prevalence study {#hiv-study}
 
