Small fixes post Seth meeting

--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -364,6 +364,7 @@ knitr::include_graphics("figures/beyond-borders/integration-strategy.png")
 ```
 
 Most of the time it is not possible to calculate Equation \@ref(eq:ik2) analytically.
+<!-- Exceptions include @rasmussen2003bayesian. -->
 Instead, consider $n$ collections of $L_i$ samples $\{s^{(i)}_l \}_{l = 1}^{L_i} \sim \mathcal{U}(A_i)$ drawn uniformly from each area.
 Then the integral may be approximated using Monte Carlo by the double sum
 \begin{equation}
@@ -606,7 +607,7 @@ p(y_i^\star \, | \, m_i^\star, \rho_i) =
 
 ### Model comparison
 
-(ref:cv) In leave-one-out (LOO) cross-validation, in each fold one observation is left out of the training data and predicted upon. In spatial-leave-one-out (SLOO) cross-valdation, observations corresponding to adjacent areas are also left out of the training data.
+(ref:cv) In leave-one-out (LOO) cross-validation, in each fold one observation is left out of the training data and predicted upon. In spatial-leave-one-out (SLOO) cross-validation, observations corresponding to adjacent areas are also left out of the training data.
 
 ```{r cv, fig.cap="(ref:cv)"}
 knitr::include_graphics("figures/beyond-borders/cv.png")
@@ -614,7 +615,7 @@ knitr::include_graphics("figures/beyond-borders/cv.png")
 
 Each model was assessed using (Figure \@ref(fig:cv)):
 
-1. a standard leave-one-out cross-validation (LOO-CV);
+1. a regular leave-one-out cross-validation (LOO-CV);
 2. a spatial leave-one-out cross-validation (SLOO-CV).
 
 At each fold the CRPS, MSE and quantile (as in Section \@ref(model-assessment)) of posterior predictive samples as compared with the observed data were computed.
