--- a/references.bib
+++ b/references.bib
@@ -2451,3 +2451,12 @@
   author={Vehtari, Aki and Ojanen, Janne},
   year={2012}
 }
+
+@article{rasmussen2003bayesian,
+  title={Bayesian Monte Carlo},
+  author={Rasmussen, Carl Edward and Ghahramani, Zoubin},
+  journal={Advances in neural information processing systems},
+  pages={505--512},
+  year={2003},
+  publisher={MIT; 1998}
+}
